--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <li><a href="./pricing-flex.html">Pricing Flex</a></li>
             <li><a href="./product-list.html">Product List</a></li>
             <li><a href="./register-layout.html">Register Layout</a></li>
+            <li><a href="./froggy.html">Froggy</a></li>
         </ul>
     </body>
 </html>
